Added simulations, and text

--- a/latex/Appendix.tex
+++ b/latex/Appendix.tex
@@ -25,4 +25,4 @@ This is also important for classificatoin (see article).
 
 \subsection{Bootstrapping}
 \label{sub:Bootstrapping}
-
+For an introduction to Bootstrapping, see \cite{efron1994bootstrap}.
