--- a/latex/boosting.tex
+++ b/latex/boosting.tex
@@ -4,19 +4,17 @@ set_parent('./project.Rnw')
 \section{Boosting}
 \label{sec:Boosting}
 %%fakesubsection Boosting
-In this part boosting will be discussed, first in general terms with \textit{Adaboost} as an introductory example. However, the main focus will be on boosting trees and their performance, hereunder mainly \textit{Gradient boosting}. \\
-\\
-The idea behind boosting is to combine many ''weak'' classifiers to create one ''strong''. This is usually referred to as a committee-based classifier, and bears some resemblance to other committee-based approaches such as \textit{bagging} as will be discussed in section \todo{section}. Roughly said, the algorithms trains weak classifiers sequentially, and for each new classifier the data points are weighted by how hard they were for previous classifiers to classify correctly. At the end all the classifiers are combined and weighted based on how well they preform. The idea is better illustrated in Freund and Schapire's (1997) algorithm \textit{AdaBoost.M1} \cite{adaboostM1}.
+In this part boosting will be discussed, first in general terms with \textit{Adaboost} as an introductory example. The main focus will be on boosting trees and their performance, hereunder mainly \textit{Gradient boosting}.
+
+The idea behind boosting is to combine many ''weak'' classifiers to create one ''strong''. This is usually referred to as a committee-based classifier, and bears some resemblance to other committee-based approaches such as \textit{bagging} as will be discussed in Section~\ref{sec:Bagging}.  Roughly said, the algorithms trains weak classifiers sequentially, and for each new classifier the data points are weighted by how hard they were for previous classifiers to classify correctly. At the end all the classifiers are combined and weighted based on how well they preform. The idea is better illustrated in Freund and Schapire's (1997) algorithm \textit{AdaBoost.M1} \cite{adaboostM1}.
 \subsection{Adaboost}
 \label{sub:Adaboost}
-\colorbox{yellow}{Wikipedia calls adaboost the best out-of-the-box classifier}
 \todo{Adaboost or AdaBoost}
-\colorbox{yellow}{Any point talking about exponential loss if not adaboost?}\\
-\colorbox{yellow}{In R: adabag.}\\
 Adaboost.M1 \url{http://cseweb.ucsd.edu/~yfreund/papers/IntroToBoosting.pdf} This is mentioned in the start of boosting \cite{modstat} \\
-Algorithm 10.1 in \cite{modstat} only works for two classes, as $\alpha$ changes sign for $err > 0.5$. \\
+\colorbox{yellow}{Some say it is sensitive to noisy data and outliers}\\
+\colorbox{yellow}{Something about how boosting decrease bias. By tuning tree size, you can control the bias variance tradeoff.}\\
 \\
-Adaboost.M1 was created in (1997) and \colorbox{yellow}{some history}. Hastie et al. (2006) \cite{modstat} described it as the ''the most popular boosting algorithm''. Only the two class case will be discussed here, but it generalizes easily. The method requires, both for two class and multi class, that the weak classifiers has prediction error less than $1/2$.
+Adaboost.M1 was created in (1997) and \colorbox{yellow}{some history}. Hastie et al. (2006) \cite{modstat} described it as the ''the most popular boosting algorithm'', and Breiman (1996) \cite{Breiman1996} as ''the best of-the-shelf classifier in the world'' . Only the two class case will be discussed here, but it generalizes easily. The method requires, both for two class and multi class, that the weak classifiers has prediction error less than $1/2$.
 
 Consider output variable coded as $Y \in \{-1, 1\}$. A weak classifier $C(X)$ is chosen to do the ground work. This can for instance be a shallow tree, or some other algorithm that does not perform much better than random guessing. All the data points $\mathbf{x}_i$, $i = 1, 2, \ldots, N$, are initialized with weights $w_i = 1/N$. Then, for $m = 1$, $C_m(\mathbf{x}_i)$ is trained using the weights. $err_m$ is used as a performance measure for $C_m(\mathbf{x}_i)$.
 \begin{align}
@@ -31,11 +29,8 @@ This is repeated for $m = 1, \ldots, M$. Finally the classifier is created
 \begin{align}
   C( \mathbf{x}) = \text{sign}\left( \sum^{M}_{m=1} \alpha_m C_m(\mathbf{x}) \right).
 \end{align}
-There are many choices of weak classifiers, but one of the more common is to use classification trees. It is then important to not grow an optimal tree as with CART, but instead grow a shallow tree or just stumps (one split).
-\\ \colorbox{yellow}{Why does the weak classifier has to be weak? Why not grow a large tree?}. An example of this implementation can be found in the r package \verb+adabag+ \cite{adabag}. How to best grow a weak classification tree for AdaBoost will not be further covered in this paper. But rather considered a tuning parameter.
-\\\colorbox{yellow}{Refer to paper where this is discussed?}
-\\ \colorbox{yellow}{or aybe write a small section on tree size?}\\
-Later when adaboost is used on data, there is supplied a maximum depth of the trees to \verb+adabag+. So the trees will be grown to this size (no pruning) unless there are too few datapoints in the splitting node.
+There are many choices of weak classifiers, but one of the more common is to use classification trees. It is then important to not grow an optimal tree as with CART, but instead grow a shallow tree or just stumps (one split). The size of the individual trees will be discussed in Section~\ref{sub:Tree size}. For computational purposes,the trees are only grown and not pruned back.
+An example of this implementation can be found in the r package \verb+adabag+ \cite{adabag}. 
 
 \subsection{Forward stagewise Additive Modeling}
 \label{sub:Forward stagewise additive modeling}
@@ -77,14 +72,15 @@ So the classification rule in Adabost.M1 approximates one half of the log-odds. 
 # Plot of different loss functions
 source("../code/lossFunctions.R")
 @
-\colorbox{yellow}{Drawing of different loss functions}
 The choice of loss function is important in terms of both accuracy and computations. While the use of $0/1$ loss might be intuitive, a differentiable loss function might have a computational advantage. By using squared-error loss, $L = (Y - f(X))^2$, \eqref{eq:forStageWise} fit a basis function to the residual of the previous function. There exist fast algorithms for solving these type of problems, but squared-error loss is still not considered a good choice for classification. That can be explained by Figure~\ref{fig:lossFunctions}. The figure shows the loss $L(y, f(\mathbf{x}))$ for different loss functions, where $y \in \left\{ -1, 1 \right\}$. If the classification rule is $C(\mathbf{x}) = \mathrm{sign}(f(\mathbf{x}))$, then a positive margin $y f(\mathbf{x}) > 0$ implies a correct classification, while a negative margin implies a wrong. It is clear from the figure that squared-error loss start increasing when the margin is higher than $1$. As any loss function should penalize a negative margin more than a positive one, this makes squared-error loss not very well suited for classification.
 
-From the figure it is clear that exponential and misclassification loss decrease with the margin and are therefore better choices than square-error loss. But as mentioned earlier, and will become more clear in \colorbox{yellow}{the next section}, a differentiable loss is easier to use. The last loss function in Figure~\ref{fig:lossFunctions} is the \textit{negative binomial log-likelihood}, or \textit{binomial deviance},
+From the figure it is clear that exponential and misclassification loss decrease with the margin and are therefore better choices than square-error loss. But as mentioned earlier, and will become more clear in Section~\ref{sub:Gradient boosting}, a differentiable loss gives some computational advantages. The last loss function in Figure~\ref{fig:lossFunctions} is the \textit{negative binomial log-likelihood}, or \textit{binomial deviance},
 \begin{align}
   L(y, f(\mathbf{x})) = \log \left( 1 + \exp (-2 y f(\mathbf{x})) \right).
 \end{align}
-This locks very similar to the exponential loss, but might be the preferred choice. The main difference is that for increasingly negative margins the exponential loss penalize exponentially, while the binomial deviance penalize linearly. Therefore the binomial deviance is not as vulnerable in noisy settings. The binomial deviance is a very common choice and is was will be used for the rest of this section. For multi class cases, the binomial deviance generalizes to the \textit{multinomial deviance}
+This locks very similar to the exponential loss, but might be the preferred choice. The main difference is that for increasingly negative margins the exponential loss penalize exponentially, while the binomial deviance penalize linearly. Therefore the binomial deviance is not as vulnerable in noisy settings. The binomial deviance is a very common choice and will be the main focus for the rest of Section~\ref{sec:Boosting}. 
+
+For multi class cases, the binomial deviance generalizes to the \textit{multinomial deviance}
 \begin{align}
   \label{eq:multinomialDeviance} 
   &L(y, \mathbf{f}( \mathbf{x })) = - \sum^{K}_{k=1} I\{y = k\} \log p_k(\mathbf{x}), \\
@@ -93,7 +89,8 @@ This locks very similar to the exponential loss, but might be the preferred choi
   &\text{and} \quad \mathbf{f} = (f_1, \ldots, f_K)^T.
 \end{align}
 As with logistic regression, this is a probabilistic classifier, ie. it returns class probabilities. That is very useful in fields like data mining, but can also be useful in pure classification when combining into ensembles. \colorbox{yellow}{Need to mention ensemble learning somewhere.}
-\colorbox{yellow}{More loss functions?}
+
+Zhu et al. (2009) \cite{zhu2009} generalize the exponential loss for multiple classes.
 %
 \begin{figure}[h!]
 \begin{center}
@@ -106,10 +103,7 @@ As with logistic regression, this is a probabilistic classifier, ie. it returns 
 \subsection{Gradient boosting}
 \label{sub:Gradient boosting}
 %%fakesubsubsection Gradient boosting
-\colorbox{yellow}{Gradient boosting use regression trees, NOT classification. Include section on regression trees?} \\
-\colorbox{yellow}{Both stochastic and "non-stochastic" gradient boosting?} In that case do regularization in \cite{modstat}.
-\\ Gradient boosting paper \cite{friedman}. \colorbox{yellow}{Algo 6 is equal to algo 5  for K = 2}\\
-\colorbox{yellow}{Take a look at 7. Tree boosting \cite[p.~22]{friedman}} \\
+Gradient boosting paper \cite{friedman}. \colorbox{yellow}{Algo 6 is equal to algo 5  for K = 2}\\
 Zhu et al. (2005) generalize exponential loss for K-class problems \cite[p.~349]{modstat}.
 
 \colorbox{yellow}{Look at influence trimmin \cite{friedman}}.
@@ -171,7 +165,7 @@ As with classification all the regions $R_j$ are disjunct and collectively cover
 \begin{align}
   \hat{c}_j = \mathrm{ave}(\tilde y_i | \mathbf{x}_i \in R_j).
 \end{align}
-The tree is grown sequentially, similarly as with classification, by finding the split that minimize the total squared error loss. When a larger tree is grown, it can then be pruned back using \textit{const-complexity pruning} based on the squared error and penalized by the number of terminal nodes. In the boosing context however, pruning is not really an alternative. Usually $J \leq 10$ end-nodes will be sufficient \cite[p.~363]{modstat}, and thus growing a larger tree and pruning it back will only be very computationally expensive, probably with worse end results. \todo{Discuss this later?}\\
+The tree is grown sequentially, similarly as with classification, by finding the split that minimize the total squared error loss. When a larger tree is grown, it can then be pruned back using \textit{const-complexity pruning} based on the squared error and penalized by the number of terminal nodes. In the boosting context however, pruning is not really an alternative. Usually $J \leq 10$ end-nodes will be sufficient \cite[p.~363]{modstat}, and thus growing a larger tree and pruning it back will only be very computationally expensive without much effect on the end results. The tree size will be further discussed in Section~\ref{sub:Tree size}.\\
 \\
 In gradient boosting trees are fitted in \eqref{eq:gradBoostFit}, in place of $\beta h(\mathbf{x}_i; \bm{\gamma})$ and $f_m$ can be created by
 \begin{align}
@@ -221,30 +215,64 @@ All this is repeated $M$ times, and classification can be done based on the log-
 \\
 It is pretty straight forward to expand the algorithm to multi-class classification. As mentioned earlier, the binomial deviance generalizes to the multinomial deviance in \eqref{eq:multinomialDeviance}. As there are now $K$ functions $f_k$, $K$ different trees has to be fitted at each iteration, on for each pair $(\tilde y_{k i}, f_k)$.Correspondingly, $J$ coefficients $\eta_{m k j}$ has to be fit for each tree, using the Newton-Raphson step. At he end the classifier is created based on the estimated class probabilities in \eqref{eq:multinomialDevianceProb}. For more details see for example \cite{friedman}.
 
-\subsection{Tweaking gradient boosting}
-\label{sub:Tweaking gradient boosting}
+\subsection{Tuning boosting algorithms}
+\label{sub:Tuning boosting algorithms}
+As mentioned earlier, the boosting algorithms have parameters that need to be set by the user. The choice of these parameters can have a great impact on both performance and time, and they often depend on each other. The first parameter that might come to mind is the number of boosting iterations $M$. It controls the balance between underfitting and overfitting. The choice for $M$ is usually made through either a test set, if there is a large amount of data, or through cross-validation. It is also possible to use the \textit{Out-of-bag} estimates for  \textit{Stochastic gradient boosting} (see Section~\ref{sub:Stochastic gradient boosting}, and \todo{ref to OOB}), which will be discussed later. 
+
+\subsubsection{Tree size}
+\label{sub:Tree size}
+\colorbox{yellow}{Write somewhere how I use the term ''bias-variance tradeoff'', even though it does not apply to classification. }\\
+\colorbox{yellow}{This is because it as similar properties, although not as easy to show.}\\
+\colorbox{yellow}{Find some references of people that have tried (phd thesis), or here}\\
+\url{http://homes.cs.washington.edu/~pedrod/papers/kdd97.pdf}\\ 
+\colorbox{yellow}{This url is good, even though it was written for bagging.}\\
+The number of terminal nodes $J$ in the trees controls the classification equivalence of a ''bias-variance tradeoff'' discussed in \colorbox{yellow}{section}. Large trees has high variance and low bias, while small trees have the opposite.   Following the reasoning in \cite{modstat} and \cite{friedman}, the goal is to find $f^*$ solving \eqref{eq:fargmin}. Consider an ANOVA expansion of the solution,
+\begin{align}
+  \label{eq:ANOVAexpansion} 
+  f^*(\mathbf{x}) = \sum_{i} f_i(x_i) + \sum_{ij} f_{ij}(x_i, x_j) + 
+  \sum_{ijk} f_{ijk}(x_i, x_j, x_k) + \cdots,
+\end{align}
+where $\mathbf{x} = (x_1, x_2, \ldots, x_p)^T$. $f_i$ is called the ''main-effect'', $f_{ij}$ the ''second order interaction'', $f_{ijk}$ the ''third order interaction'', and so on. The expansion is such that the first sum is the best approximation to $f^*$ under the constraint of only ''main-effects''. The second sum gives the best approximation of $f^*$ under the constrain of only ''main-effects'' and ''second order interactions''. This way \eqref{eq:ANOVAexpansion} can be viewed as an additive model. 
+
+When fitting an additive model of trees with only two terminal nodes (commonly called stumps), these will have the same structure as the ''main-effects''. To capture interactions of order up to $J$, a tree with $J+1$  terminal nodes is needed, in addition to $N>J$. However, by setting $J$ to large, unnecessary variance is introduced in the trees. Boosting methods works by lowering the bias through the forward stagewise process, so it might be advantageous to use high bias low variance trees, but ideally one would of course try to be close to the dominant interaction order of $f^*$.
+Experience suggest that $4 \leq J \leq 8$ usually works well, and $J>10$ is rarely needed \cite{modstat}.  
+
+\subsubsection{Shrinkage}
+\label{sub:Shrinkage}
+As discussed earlier, regularization is controlled by number of boosting iterations $M$. However, test has shown  \cite{copas1983} that \textit{shrinkage} might improve the results obtained by only restricting on $M$. For the gradient boosting algorithm it is straight forward to include this. 
+The update of $f$ in \eqref{eq:gradBoostUpdateF} is just changed to
+\begin{align}
+  f_m(\mathbf{x}) = f_{m-1}(\mathbf{x}) +  \nu \sum^{J}_{j=0} \eta_{m j} I\left\{ \mathbf{x} \in R_{m j} \right\}, \quad 0 < \nu < 1,
+\end{align}
+or more generally in the forward stagewise framework,
+\begin{align}
+  f_m(\mathbf{x}) = f_{m-1}(\mathbf{x}) +  \nu \: \beta_m h(\mathbf{x}; \bm \gamma_m), \quad 0 < \nu < 1.
+\end{align}
+Here $\nu$ is often referred to as the ''learning rate'' or ''shrinkage parameter''. Empirically it has been found \cite{friedman} that smaller values of $\nu$ give better test error. However, it requires a correspondingly larger $M$. This can be expensive as computations scales with $M$. This $\nu$-$M$ tradeoff will be illustrated in simulations.
+
 
 \subsubsection{Influence trimming}
 \label{sub:Influence trimming}
 \todo{influence trimming \cite{friedman}?}
-For $y_i f_{m-1}(\mathbf{x}_i)$ large, the effect of of $\beta_m h(\mathbf{x}_i; \bm{\gamma}_m)$ is very small, so the data point $(\mathbf{x}_i, y_i)$ can be removed from the computations without any impact on the results. See \cite{friedman}.
-
-\subsubsection{Regularization}
-\label{sub:Regularizatoin}
-\todo{Section on boosting and overfitting}
-The number of components $M$ in the additive model \eqref{eq:additive}, is a tuning parameter that can prevent overfitting. $M$ can be optimized using a test set or cross-validation.\\
-\\
-Test has shown that \textit{shrinkage} might be better than tuning $M$ \cite{copas1983} \colorbox{yellow}{see \cite{friedman} for explanation}. The updating of $f$ can now be changed form \eqref{eq:gradBoostUpdateF} to 
+For binomial loss, at the $m$'th iteration, the problem at hand is to minimize
 \begin{align}
-  f_m(\mathbf{x}) = f_{m-1}(\mathbf{x}) +  \nu \sum^{J}_{j=0} \eta_{m j} I\left\{ \mathbf{x} \in R_{m j} \right\}, \quad 0 < \nu < 1,
+  \label{eq:influence} 
+  \sum_{i = 1}^{N} \log \left( 1 + \exp[ -2 y_i f_{m-1}(\mathbf{x}_i)] \exp [-2 y_i \rho h(\mathbf{x}_i; \bm \gamma)] \right),
 \end{align}
-where $\nu$ is often referred to as the ''learning rate''. Empirically it has been found \cite{friedman} that smaller values of $\nu$ give better test error. However, it requires a correspondingly larger $M$, and its computations scales with $M$. \cite{breiman}.
-\todo{Simulation example to show different tuning parameters?}
+over $\rho$ and $\bm \gamma$.  For $y_i f_{m-1}(\mathbf{x}_i)$ large, the effect of of $\rho h(\mathbf{x}_i; \bm{\gamma})$ is very small, and the minimization of \eqref{eq:influence} is more or less independent of $\rho h(\mathbf{x}_i; \bm \gamma)$. This means that the data point $(\mathbf{x}_i, y_i)$ can be removed from the calculations, without any substantial effect on $\rho$ and $\bm \gamma$. Removing such points during training is called \textit{influence trimming}, and can speed up the calculations. Friedman therefore used 
+\begin{align}
+  w_i = \exp (- 2 y_i f_{m-1}(\mathbf{x}_i)), 
+\end{align}
+as an measure for influence. 
 
-\subsubsection{Tree size}
-\label{sub:Tree size}
-The number of terminal nodes in the trees $J$ can be tuned. \\
-\colorbox{yellow}{See section $10.11$ in modstat}
+More generally, the influence can be measured \\
+\colorbox{yellow}{See generalization on p.10 in gradient boosting machine.}\\
+\colorbox{yellow}{Why does it make sense to study the second derivative?}\\
+\colorbox{yellow}{How does he get $|\tilde{y}_i|\: (2 - |\tilde{y}_i|)$ form this?}\\
+\\
+Friedman generalize influence trimming to multiple classes in \cite{friedman}.
+
+
 
 
 \subsection{Variable selection}
@@ -258,12 +286,11 @@ The number of terminal nodes in the trees $J$ can be tuned. \\
 \subsection{Stochastic gradient boosting}
 \label{sub:Stochastic gradient boosting}
 ada: an R package for stochastic boosting \url{http://dept.stat.lsa.umich.edu/~gmichail/ada_final.pdf} \\
-Friedman \url{https://statweb.stanford.edu/~jhf/ftp/stobst.pdf} \cite{FriedmanStochBoost}. \\
 \\
 In 1996, Breiman \cite{Breiman1996} introduced his \textit{bagging} procedure, as will be further explained in  \colorbox{yellow}{sectionref}. He showed that the performance of function estimation procedures could be improved by introducing randomness in the training data. Inspired by this, in addition to Freund and Schapire's randomization of Adaboost in 1996 \cite{freund1996} and Breiman's hybrid procedure of boosting and bagging in 1999 \cite{breiman1999}, Friedman developed in 1999 the \textit{stochastic gradient boosting} algorithm \cite{FriedmanStochBoost}.
 This new method is only a slight modification of the gradient boosting algorithm, but has been shown capable of outperforming its gradient boosting, both in terms of accuracy and computational speed  \cite{FriedmanStochBoost}.
 
-The idea is draw a random subsample of the training data, without replacement, at each iteration. All the steps are exactly the same as in the gradient boosting algorithm, but they are performed on the subsample. \\
+The idea is: draw a random subsample of the training data, without replacement, at each iteration. All the steps are exactly the same as in the gradient boosting algorithm, but they are performed on the subsample. \\
 \\
 The size of the subset, $N_{sub}$, introduce another tuning parameter. Smaller values of $N_{sub}$ introduce more randomness to the procedure, while reducing computing time by the fraction $N_{sub}/N$. However, as the data trained on at each iterations becomes smaller, the variance of the individual base learners will increase. The gain comes from reduction in the correlation between estimates at each iteration, as this tend to reduce the variance of the combined model \eqref{eq:additive}.
 
