--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -12,6 +12,10 @@ set_parent('./project.Rnw')
 
 \section{CART}
 \label{sec:CARTsim}
+Simulation 1: \\
+Plot pruned and unpruned tree. \\
+Plot test error for different \verb+cp+ parameters, or (same) different pruning. From full tree, back to a stump.\\
+Hope that \verb+cp+ in \verb+pruning.rpart+ is the same as $\alpha$ in cost complexity pruning???
 
 
 
