Changed to book formate

--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -2,15 +2,17 @@
 set_parent('./project.Rnw')
 @
 
-
-\section{Dataset}
-\label{sec:Dataset}
 \todo{New chapter here}
+To measure the performance and explore the applicability of the theory in pracsise, different datasets was used. 
+
+\section{Spam dataset}
+\label{sec:Spam dataset}
 \colorbox{yellow}{Need to write something about the data set. Description and so on.}\\
 \colorbox{yellow}{Look at what others have done.} \\
 \url{http://sci2s.ugr.es/keel/dataset.php?cod=109} Spam data.\\
 \\
 \colorbox{yellow}{If I use categorical variables, should I include section on how the algorithms handles them?}
+ \cite{Spamdata}
 
 \section{CART}
 \label{sec:CARTsim}
