--- a/latex/project.Rnw
+++ b/latex/project.Rnw
@@ -21,10 +21,12 @@
 
 \date{\normalsize\today} % Today's date or a custom date
 \begin{document}
+\frontmatter
 \maketitle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \listoftodos{}
 \tableofcontents
+
 \mainmatter
 %
 %\input{./introduction.tex}
@@ -54,7 +56,7 @@
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\clearpage
+%\clearpage
 \begin{appendices}
   %% Use \section
   %% Can use \phantomsection in text to get back
